fixed compliance status dark mode issue

--- a/ATAPHtmlReport/report.css
+++ b/ATAPHtmlReport/report.css
@@ -197,6 +197,13 @@ a.totop:hover {
 	border-radius: 50%;
 	overflow: hidden;
 }
+
+.donut-chart.chart {
+	width: 200px; 
+	height: 200px;
+	background: #c6c9cc;
+}
+
 .donut-chart .slice {
 	position: absolute;
 	top: 0;
@@ -204,11 +211,21 @@ a.totop:hover {
 	width: 100%;
 	height: 100%;
 }
+
 .donut-chart .chart-center {
 	position: absolute;
 	border-radius: 50%;
+	top: 25px;
+	left: 25px;
+	width: 150px;
+	height: 150px;
+	background: white;
 }
+
 .donut-chart .chart-center span {
 	display: block;
 	text-align: center;
+	font-size: 40px;
+	line-height: 150px;
+	color: black;
 }
